Fixed paragraph tag wrapping issue with css adjustment to the p tag word-break break all.

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ header input {
 
 p {
   font-size: .8em;
+  word-break: break-all;
 }
 
 .main {
